force-app/main/default/objects/DealerBrandMake__c/DealerBrandMake__c.object-meta.xml
<CustomObject>
    <label>Dealer Brand Make</label>
    <nameField>
        <label>Dealer Brand Make Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Brand Makes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>