force-app/main/default/objects/DealerBrandMake__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Brand defined for the make chosen for this dealership</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Brands__c</referenceTo>
    <relationshipLabel>Dealer Brand Makes</relationshipLabel>
    <relationshipName>Dealer_Brand_Makes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>