force-app/main/default/objects/DealerBrandMake__c/fields/Brand_Make__c.field-meta.xml
<CustomField>
    <fullName>Brand_Make__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Brand Make object to get the brand Id</description>
    <inlineHelpText>Brand related to the make</inlineHelpText>
    <label>Brand</label>
    <referenceTo>BrandMakes__c</referenceTo>
    <relationshipLabel>Dealer Brand Makes</relationshipLabel>
    <relationshipName>Dealer_Brand_Makes</relationshipName>
    <type>Lookup</type>
</CustomField>