force-app/main/default/objects/DealerBrandMake__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Dealer for which the Make and Brand is associated wtih</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer&apos;s Makes to Brands</relationshipLabel>
    <relationshipName>Dealer_Brand_Makes</relationshipName>
    <type>Lookup</type>
</CustomField>