force-app/main/default/objects/DealerBrandMake__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Make we are defining the branding for</inlineHelpText>
    <label>Make</label>
    <referenceTo>Makes__c</referenceTo>
    <relationshipLabel>Dealer Brand Makes</relationshipLabel>
    <relationshipName>Dealer_Brand_Makes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>